# hiroz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.d
src/: CMakeLists.txt  hero.cpp  hero.d  hero.hpp
test/: CMakeLists.txt  hero_test.cpp
